changed all texts colour

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Hi my name is bailey</p>
-    <p>We're a happy team at HAWTHORN</p>
+    <h6 style="background: deeppink">Hello, World!</h6>
+    <p style="background: saddlebrown">Hi my name is bailey</p>
+    <p style="background:yellow">We're a happy team HAWTHORN</p>
 </body>
 </html>
