added colour to font and 1st paragraph changed font on 2nd text

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h6 style="background: deeppink">Hello, World!</h6>
-    <p style="background: saddlebrown">Hi my name is bailey</p>
-    <p style="background:yellow">We're a happy team HAWTHORN</p>
+    <h6 style="font-size: 250%">Hello, World!</h6>
+    <p style="color: saddlebrown">Hi my name is bailey</p>
+    <p style="font: lining-nums">We're a happy team HAWTHORN</p>
 </body>
 </html>
