1st chagned to pink and add font on 2nd

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h6 style="font-size: 250%">Hello, World!</h6>
-    <p style="color: saddlebrown">Hi my name is bailey</p>
-    <p style="font: lining-nums">We're a happy team HAWTHORN</p>
+    <p style="color: hotpink">Hi my name is bailey</p>
+    <p style="font-family: 'Franklin Gothic Demi'">We're a happy team HAWTHORN</p>
 </body>
 </html>
