--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h6 style="font-size: 250%">Hello, World!</h6>
     <p style="color: hotpink">Hi my name is bailey</p>
-    <p style="font-family: 'Franklin Gothic Demi'">We're a happy team HAWTHORN</p>
+    <p style="font-family: fantasy">We're a happy team at HAWTHORN</p>
 </body>
 </html>
